<resources>
    <string name="app_name">GymBuddy</string>
    <string name="open_nav">Open Menu</string>
    <string name="close_nav">Close Menu</string>
    <string name="nav_homeText">Home</string>
    <string name="nav_trainingsText">Trainings</string>
    <string name="nav_trainings_historyText">Trainings History</string>
    <string name="nav_weightText">Weight\n</string>
    <string name="nav_figureText">Figure</string>
    <string name="nav_exercieDbText">Exercises Database</string>
    <string name="nav_aboutText">About app</string>
    <string name="logo">Logo</string>
    <string name="home_welcome_string">Hi There! Welcome in GymBuddy - your personal training buddy</string>
    <string name="start_new_training_button_text">Let\'s train!</string>
    <string name="delete_Button_Text">Delete</string>
    <string name="edit_Button_Text">Edit</string>
    <string name="fabrykasily_logo">FabrykaSily_Logo</string>
    <string name="instruction_Video_copyright_fabrykasily">The instructional video belongs to the company www.fabrykasily.pl</string>
    <string name="exercise_details_title_text">Exercise details</string>
    <string name="return_btn_text">Return</string>
    <string name="open_button_text">Open</string>
    <string name="category_image_text">Category image</string>
</resources>