<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cancel_darken"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvExercisesDetailsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_details_title_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <VideoView
        android:id="@+id/vvExerciseVideo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExercisesDetailsTitle" />

    <ImageView
        android:id="@+id/ivFabrykaSilyLogo"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:contentDescription="@string/fabrykasily_logo"
        android:src="@drawable/fabrykasily_logo"
        app:layout_constraintBottom_toTopOf="@+id/btnReturn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vvExerciseVideo" />

    <TextView
        android:id="@+id/tvVideoInstructionCopyRight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/instruction_Video_copyright_fabrykasily"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnReturn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivFabrykaSilyLogo"
        app:layout_constraintTop_toBottomOf="@+id/vvExerciseVideo" />

    <Button
        android:id="@+id/btnReturn"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/defaultbutton"
        android:text="@string/return_btn_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>